[fix] GB - add overflow scrollbars on small screen, fixed action items width

--- a/modules/Utils/GenericBrowser/theme/default.css
+++ b/modules/Utils/GenericBrowser/theme/default.css
@@ -14,6 +14,10 @@
 	padding: 0px 0px 2px 0px;
 }
 
+.Utils_GenericBrowser__actions {
+	box-sizing: content-box;
+}
+
 .GenericBrowser_letters {
 	background-color: white;
 	height: 22px;
@@ -56,7 +60,7 @@
     vertical-align: middle;
     width: 96px;
     border: 1px solid #b3b3b3;
-	
+
 	/* border radius */
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -76,7 +80,7 @@
     color: white;
 	padding-bottom: 3px;
 	margin-left: 3px;
-	
+
 	/*dark css3 green background gradient */
 	background: #226622; /* Old browsers */
 	background: -moz-linear-gradient(top, #709c70 0%, #4d844d 49%, #226622 51%, #649464 100%); /* FF3.6+ */
@@ -87,13 +91,13 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -133,13 +137,13 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -187,6 +191,14 @@ table.Utils_GenericBrowser > thead > tr > th input {
 
 table.Utils_GenericBrowser > thead > tr > th input:focus {
     background-color: #ffffa5;
+}
+
+.Utils_GenericBrowser_overflow_container {
+	overflow:auto;
+}
+
+table.Utils_GenericBrowser {
+		min-width:950px;
 }
 
 table.Utils_GenericBrowser > tbody {
@@ -238,13 +250,13 @@ table.Utils_GenericBrowser > tbody > td img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -318,7 +330,7 @@ table.Utils_GenericBrowser > tbody > td img {
     width: auto;
     padding: 0px 5px 2px 7px;
 	color: white;
-	
+
 	/*dark css3 green background gradient */
 	background: #226622; /* Old browsers */
 	background: -moz-linear-gradient(top, #709c70 0%, #4d844d 49%, #226622 51%, #649464 100%); /* FF3.6+ */
@@ -329,13 +341,13 @@ table.Utils_GenericBrowser > tbody > td img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -368,7 +380,7 @@ table.Utils_GenericBrowser > tbody > td img {
     text-align: center;
 	color: white;
 	padding:  0px 1px 2px 2px;
-	
+
 	/*dark css3 green background gradient */
 	background: #226622; /* Old browsers */
 	background: -moz-linear-gradient(top, #709c70 0%, #4d844d 49%, #226622 51%, #649464 100%); /* FF3.6+ */
@@ -379,13 +391,13 @@ table.Utils_GenericBrowser > tbody > td img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -424,7 +436,7 @@ table.Utils_GenericBrowser > tbody > td img {
     color: white;
     cursor: pointer;
     float: left;
-	
+
 	/*dark css3 green background gradient */
 	background: #226622; /* Old browsers */
 	background: -moz-linear-gradient(top, #709c70 0%, #4d844d 49%, #226622 51%, #649464 100%); /* FF3.6+ */
@@ -435,13 +447,13 @@ table.Utils_GenericBrowser > tbody > td img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	/* border radius */
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 	/* end border radius */
-	
+
 	/* css3 shadow border*/
 	-webkit-box-shadow: 1px 1px 3px gray;
 	-moz-box-shadow: 1px 1px 3px gray;
@@ -509,7 +521,7 @@ table.Utils_GenericBrowser > tbody > td img {
 #Utils_GenericBrowser__navigation {
 	color: white;
 	font-size: 120%;
-	
+
 	/* gray v1 css3 background gradient */
 	background: #9c9c9c; /* Old browsers */
 	background: -moz-linear-gradient(top, #9c9c9c 0%, #858585 49%, #666666 51%, #939393 100%); /* FF3.6+ */
@@ -543,7 +555,7 @@ table.Utils_GenericBrowser > tbody > td img {
 	height: 19px;
 	padding: 4px 5px 2px 5px;
 	margin-right: 4px;
-	
+
 	/*dark css3 green background gradient */
 	background: #226622; /* Old browsers */
 	background: -moz-linear-gradient(top, #709c70 0%, #4d844d 49%, #226622 51%, #649464 100%); /* FF3.6+ */
@@ -554,7 +566,7 @@ table.Utils_GenericBrowser > tbody > td img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64B164', endColorstr='#307030',GradientType=0); /* IE6-9 */
 	background: linear-gradient(top, #709c70 0%,#4d844d 49%,#226622 51%,#649464 100%); /* W3C */
 	/* end dark css3 green background gradient */
-	
+
 	-webkit-box-shadow: inset 1px 1px 1px #333;
 	-moz-box-shadow: inset 1px 1px 1px #333;
 	box-shadow: inset 1px 1px 1px #333;
